cmake_minimum_required(VERSION 3.16)
project(C300 C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(C300
        001.c
        002.c
        003.c
        004.c
        005.c
        006.c
        007.c
        008.c
        009.c
        010.c
        011.c
        012.c
        013.c
        014.c
        015.c
        016.c
        017.c
        018.c
        019.c
        020.c
        021.c
        022.c
        023.c
        024.c
        025.c
        026.c
        027.c
        028.c
        029.c
        030.c
        031.c
        032.c
        033.c
        034.c
        035.c
        036.c
        037.c
        038.c
        039.c
        040.c
        041.c
        042.c
        043.c
        044.c
        045.c
        046.c
        047.c
        048.c
        049.c
        050.c
        051.c)
